<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingBottom="?attr/actionBarSize">

        <TextView
            style="@style/typography_subheading_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/unit4"
            android:layout_marginStart="@dimen/unit4"
            android:text="@string/popular_movies"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@id/rvContainer_popular_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/unit6"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:overScrollMode="never" />

        <TextView
            style="@style/typography_subheading_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/unit4"
            android:layout_marginStart="@dimen/unit4"
            android:text="@string/top_rated_movies"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@id/rvContainer_top_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/unit6"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:overScrollMode="never" />

        <TextView
            style="@style/typography_subheading_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/unit4"
            android:layout_marginStart="@dimen/unit4"
            android:text="@string/upcoming_movies"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@id/rvContainer_upcoming_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/unit6"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:overScrollMode="never" />

        <TextView
            style="@style/typography_subheading_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/unit4"
            android:layout_marginStart="@dimen/unit4"
            android:text="@string/now_playing_movies"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@id/rvContainer_running_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/unit6"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:overScrollMode="never" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>